@@ -15,8 +15,12 @@ apport (0.83) UNRELEASED; urgency=low
     much easier to test it here, on an actual implementation).
   * debian/pyversions: Bump minimal Python version to 2.5, since this starts
     providing the sqlite3 module.
+  * apport/crashdb_impl/launchpad.py: Implement mark_regression() and
+    close_duplicate(). The latter does not actually dup the bug, just points
+    to the master bug in a comment, until python-launchpad-bugs actually
+    supports duplicate marking (see LP #119874).
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 11 Jun 2007 15:53:04 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 11 Jun 2007 17:32:03 +0200
 
 apport (0.82) gutsy; urgency=low
 
